[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/ParallaxBackground.gd" type="Script" id=1]
[ext_resource path="res://images/backgrounds/blue.png" type="Texture" id=2]
[ext_resource path="res://images/backgrounds/stars.png" type="Texture" id=3]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://images/ui/glassPanel_cornerTR.png" type="Texture" id=5]
[ext_resource path="res://font/Kenney Rocket.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://images/ui/green_button00.png" type="Texture" id=7]
[ext_resource path="res://images/ui/green_button03.png" type="Texture" id=8]
[ext_resource path="res://images/ui/green_button02.png" type="Texture" id=9]
[ext_resource path="res://images/ui/green_button01.png" type="Texture" id=10]
[ext_resource path="res://scripts/EnnemySpawner.gd" type="Script" id=11]
[ext_resource path="res://images/powerups/pill_green.png" type="Texture" id=12]
[ext_resource path="res://images/powerups/pill_blue.png" type="Texture" id=13]
[ext_resource path="res://sounds/title_screen.wav" type="AudioStream" id=14]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

uniform sampler2D bg_texture;

void vertex(){
	VERTEX.x = sin(TIME);
}

void fragment(){
	COLOR = texture(bg_texture, SCREEN_UV);
}"
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Menu" type="Node"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
script = ExtResource( 1 )
_sections_unfolded = [ "Scroll" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

material = SubResource( 2 )
z_index = -2
motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 256, 256 )
_sections_unfolded = [ "Material", "Motion", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]

position = Vector2( 425.46, 262.747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1200, 1200 )
_sections_unfolded = [ "Animation", "Offset", "Region" ]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground" index="1"]

z_index = -1
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 256, 256 )
_sections_unfolded = [ "Material", "Motion", "Transform" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2" index="0"]

position = Vector2( 519.167, 303.511 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 2400, 2400 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="CanvasLayer" index="0"]

position = Vector2( 510, 288.83 )
scale = Vector2( 2.28245, 2.37659 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="CanvasLayer" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -172.0
margin_top = 40.0
margin_right = 166.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Spacing' Time !"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "custom_fonts" ]

[node name="Container" type="VBoxContainer" parent="CanvasLayer" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -98.0
margin_right = 97.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 49.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 10 )
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Grow Direction", "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="CanvasLayer/Container/PlayButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Play"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "custom_fonts" ]

[node name="HelpButton" type="TextureButton" parent="CanvasLayer/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 190.0
margin_bottom = 115.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 10 )
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Grow Direction", "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="CanvasLayer/Container/HelpButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Help"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "custom_fonts" ]

[node name="QuitButton" type="TextureButton" parent="CanvasLayer/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 190.0
margin_bottom = 181.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 10 )
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Grow Direction", "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="CanvasLayer/Container/QuitButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Quit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "custom_fonts" ]

[node name="Spawner" type="Node" parent="." index="2"]

editor/display_folded = true
script = ExtResource( 11 )
health_texture = ExtResource( 12 )
boost_texture = ExtResource( 13 )

[node name="UfoTimer" type="Timer" parent="Spawner" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Ennemies" type="Node2D" parent="Spawner" index="1"]

position = Vector2( 533.939, 263.561 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


